--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".SegundaTela"></activity>
+        <activity android:name=".TerceiraTela">
+        </activity>
     </application>
 
 </manifest>
