--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Aula6"
         tools:targetApi="31">
         <activity
+            android:name=".TerceiraTela"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
@@ -21,9 +24,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SegundaTela"></activity>
-        <activity android:name=".TerceiraTela">
-        </activity>
+        <activity android:name=".SegundaTela" />
     </application>
 
 </manifest>
