--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.Aula6"
         tools:targetApi="31">
         <activity
+            android:name=".QuintaTela"
+            android:exported="false" />
+        <activity
+            android:name=".QuartaTela"
+            android:exported="false" />
+        <activity
             android:name=".TerceiraTela"
             android:exported="false" />
         <activity
